# rvdash

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Tests.yml
RVdash/: main.cpp
Test/: CMakeLists.txt  ProgGen.cpp  RunTests.cpp  RunTests.h  RunTests.hpp  Run_tests.cpp  Run_tests.hpp  Test.cpp  TestGen.bash
Test/ErrorHandlingTests/: GenTests.h
Test/ErrorHandlingTests/Answers/: 1_TestAnswer.txt  2_TestAnswer.txt  3_TestAnswer.txt  4_TestAnswer.txt  5_TestAnswer.txt
Test/ErrorHandlingTests/Data/: 1_TestData.S  2_TestData.S  3_TestData.S  4_TestData.S  5_TestData.S  6_TestData.S
Test/SnippyRVdashTests/Answers/: 5_TestAnswer.txt
Test/SnippyRVdashTests/Data/: 1_TestData.yaml  2_TestData.yaml  3_TestData.yaml  4_TestData.yaml  5_TestData.yaml
Test/rvdashTests/: GenTests.h
Test/rvdashTests/Answers/: 10_TestAnswer.txt  11_TestAnswer.txt  12_TestAnswer.txt  13_TestAnswer.txt  14_TestAnswer.txt  15_TestAnswer.txt  16_TestAnswer.txt  17_TestAnswer.txt  18_TestAnswer.txt  19_TestAnswer.txt  1_TestAnswer.txt  20_TestAnswer.txt  21_TestAnswer.txt  22_TestAnswer.txt  23_TestAnswer.txt  24_TestAnswer.txt  25_TestAnswer.txt  26_TestAnswer.txt  27_TestAnswer.txt  28_TestAnswer.txt  29_TestAnswer.txt  2_TestAnswer.txt  30_TestAnswer.txt  31_TestAnswer.txt  32_TestAnswer.txt  33_TestAnswer.txt  34_TestAnswer.txt  35_TestAnswer.txt  36_TestAnswer.txt  37_TestAnswer.txt  38_TestAnswer.txt  39_TestAnswer.txt  3_TestAnswer.txt  40_TestAnswer.txt  41_TestAnswer.txt  42_TestAnswer.txt  43_TestAnswer.txt  44_TestAnswer.txt  45_TestAnswer.txt  4_TestAnswer.txt  (+5 more)
Test/rvdashTests/Data/: 10_TestData.S  11_TestData.S  12_TestData.S  13_TestData.S  14_TestData.S  15_TestData.S  16_TestData.S  17_TestData.S  18_TestData.S  19_TestData.S  1_TestData.S  20_TestData.S  21_TestData.S  22_TestData.S  23_TestData.S  24_TestData.S  25_TestData.S  26_TestData.S  27_TestData.S  28_TestData.S  29_TestData.S  2_TestData.S  30_TestData.S  31_TestData.S  32_TestData.S  33_TestData.S  34_TestData.S  35_TestData.S  36_TestData.S  37_TestData.S  38_TestData.S  39_TestData.S  3_TestData.S  40_TestData.S  41_TestData.S  42_TestData.S  43_TestData.S  44_TestData.S  45_TestData.S  4_TestData.S  (+5 more)
include/: Error.h
include/Memory/: Memory.h
include/RVdash/InstructionSet/: InstructionSet.h
include/RVdash/InstructionSet/M/: .InstructionSet.h.swp  InstructionSet.h
include/RVdash/InstructionSet/RV32I/: InstructionSet.h
include/rvdash/: CPU.h
include/rvdash/InstructionSet/: Extensions.h  Instruction.h  InstructionSet.h  Registers.h
include/rvdash/InstructionSet/F/: InstructionSet.h
include/rvdash/InstructionSet/M/: InstructionSet.h
include/rvdash/InstructionSet/RV32I/: DefineInstrs.h  InstructionSet.h
include/rvdash/Memory/: Memory.h
lib/InstructionSet/: CMakeLists.txt  Instruction.cpp  InstructionSet.cpp
lib/InstructionSet/F/: InstructionSet.cpp
lib/InstructionSet/M/: InstructionSet.cpp
lib/InstructionSet/RV32I/: InstructionSet.cpp
lib/Memory/: CMakeLists.txt  Memory.cpp
lib/SnippyRVdash/: CMakeLists.txt  SnippyRVdash.cpp  VTable.cpp
lib/rvdash/: .CMakeLists.txt.swp  CMakeLists.txt
lib/rvdash/InstructionSet/: Instruction.cpp  InstructionSet.cpp
lib/rvdash/InstructionSet/RV32I/: InstructionSet.cpp
lib/rvdash/M/: InstructionSet.cpp
lib/rvdash/RV32I/: InstructionSet.cpp
main/: Error.cpp  main.cpp
rvdash/: Error.cpp  main.cpp
